tests/ui/annotation_is_wong.stderr
error: Not a dbstruct wrapper annotation (try DefaultTrait or DefaultValue)
 --> tests/ui/annotation_is_wong.rs:5:16
  |
5 |     #[dbstruct(NotAnnotation)]
  |                ^^^^^^^^^^^^^

error: custom attribute panicked
 --> tests/ui/annotation_is_wong.rs:3:1
  |
3 | #[dbstruct]
  | ^^^^^^^^^^^
  |
  = help: message: not yet implemented
